# DexteraAI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  __main__.py  dextera.py  docker-compose.yml  dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/mobile/: README.md
apps/web/: next.config.mjs  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/lib/: gesture-engine.ts
backend/: __init__.py  config.py  logging_config.py
backend/apps/: __init__.py
backend/apps/api/: __init__.py  dependencies.py  main.py  middleware.py  routes.py  schemas.py
core/: __init__.py  types.py
core/calibration/: __init__.py  calibrator.py
core/inference/: __init__.py  onnx_runtime.py  pipeline.py
core/landmarks/: __init__.py  augmentor.py  features.py  normalizer.py
core/temporal/: __init__.py  model.py  sequence_buffer.py  static_model.py
core/vision/: __init__.py  detector.py  preprocessor.py
docs/: api-reference.md  architecture.md  model_card.md
mlops/ci/: github-actions.yml
mlops/dvc/: dvc.yaml
mlops/mlflow/: mlflow.conf
tests/: __init__.py  conftest.py  test_calibration.py  test_datasets.py  test_inference.py  test_landmarks.py  test_temporal.py  test_types.py  test_vision.py
training/: __init__.py
training/datasets/: __init__.py  gesture_dataset.py
training/evaluation/: __init__.py  metrics.py
training/export/: __init__.py  to_onnx.py  to_tflite.py
training/trainers/: __init__.py  train_gesture.py
