[package]
name = "dextera-ai-desktop"
version = "0.1.0"
description = "DexteraAI Desktop — Native gesture recognition"
authors = ["R-Priyadarshi"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
